# musicbingo

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/brands/: page.tsx
app/host/: page.tsx
app/prep/: StepEventSetup.tsx  StepGameConfig.tsx  StepGenerateConnect.tsx  page.tsx
assets/: README.md
components/brand/: BrandForm.tsx  BrandPreviewPane.tsx  BrandProvider.tsx  BrandSelector.tsx
components/host/: AwardPointsModal.tsx  ContentPanel.tsx  GameFlowPanel.tsx  NowPlayingPanel.tsx  PlaylistPanel.tsx  TimingPanel.tsx  WelcomeSongPanel.tsx
components/motifs/: Ball.tsx  (+9 more)
hooks/: useWakeLock.ts
lib/: clipboardDocx.test.ts  clipboardDocx.ts  eventDate.ts  gameInput.ts  generator.test.ts  generator.ts  managementApi.ts  parser.ts  pdf.test.ts  pdf.ts  pdfRunSheet.ts  spotifyHelperZip.ts  spotifyLive.test.ts  spotifyLive.ts  spotifyTrackUrl.ts  spotifyWeb.ts  supabase.ts  types.ts  utils.ts
public/: README.md
scripts/: create_spotify_playlist.py  e2e-flows.mjs  next-with-localstorage.mjs
supabase/: config.toml
tasks/: plan-brand-event-feeds.md  plan-guest-screen-fixes.md  spec-brand-event-feeds.md  spec-guest-screen-fixes.md  spec-intro-songs-and-multi-challenge.md  spec-playlist-first-workflow.md  spec-timing-and-host-table.md  todo.md
tests/: test_generator.py  test_parser.py  test_pdf.py
(+206 files in other folders)
